# PMRQMC

./: .gitignore  A.txt  B.txt  CMakeLists.txt  CRUSH.md  OBSERVABLE_RESTRUCTURE.md  PMRQMC.cpp  PMRQMC_mpi.cpp  README.md  datasummary.cpp  mainqmc.hpp  measurements.conf  multiprog.cpp  parameters.hpp  prepare.cpp  test_run.sh
data_plotting_misc/: README.md
data_plotting_misc/data/: advmea_3by3tfim_verify_data.csv  advmeas_8by8tfim_data.csv  prb_fig3_tfim_data.csv  prx_fig5_xxz_data.csv
data_plotting_misc/hamiltonians_and_observables/: README.md
data_plotting_misc/hamiltonians_and_observables/tfim_observables/: tfim_3by3_B.txt  tfim_8by8_B.txt
data_plotting_misc/hamiltonians_and_observables/xxz_H_files/: xxz_H_L10.txt  xxz_H_L11.txt  xxz_H_L12.txt  xxz_H_L13.txt  xxz_H_L14.txt  xxz_H_L15.txt  xxz_H_L16.txt  xxz_H_L2.txt  xxz_H_L20.txt  xxz_H_L25.txt  xxz_H_L26.txt  xxz_H_L30.txt  xxz_H_L40.txt
data_plotting_misc/plot_scripts/: README.md  advmeas_8by8tfim.ipynb  advmeas_verify_3by3tfim.ipynb  before_fig2_post_selection.ipynb  create_fig1.ipynb  create_fig2a_and_fig2b.ipynb  create_fig2c_and_fig2d.ipynb  prb_fig3_tfim_plot.ipynb  prx_fig5_xxz_plot.ipynb
data_plotting_misc/wrangling_scripts/: README.md  form_advmea_tfim_csv_summary.sh  form_tfim_csv_summary.sh  form_xxz_csv_summary.sh  group_advmea_tfim_data.sh  group_tfim_data.sh  group_xxz_data.sh
examples/: main.cpp  main2.cpp
experiments/: tfim_driver.py  xxz_driver.py
fidsus_experiments/: zhang_prl_model_fidsus_driver.py
include/: OpSum.h  PMR.h  divdiff.h  divdiff.hpp
legacy_code/: PMRQMC.cpp  clean.sh  correlator_PMRQMC.cpp  correlator_mainqmc.hpp  mainqmc.hpp
legacy_code/correlator_experiments/: zhang_prl_model_correlator_driver.py
legacy_code/utils/: ioscripts.py
papers_summary/: adv_measurement.md  divided_differences.md  spin_half_pmrqmc.md
src/: CMakeLists.txt  OpSum.cpp  PMR.cpp  divdiff.cpp
src/core/: DividedDifferences.hpp  ExExFloat.hpp  Hamiltonian.hpp  OperatorTerm.hpp  Pauli.hpp
tests/: CMakeLists.txt  divided_differences_test.cpp  exexfloat_test.cpp  physics_test.cpp  test_divdiff.cpp  test_framework.hpp  test_opsum.cpp  test_pmr.cpp
utils/: _pauli_manipulations_test.py  build_pauliH_recipes.py  exact_calculations.py  pauli_manipulations.py  rng_seeds.txt
